; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_node/onoff_client/main/extr_board.c_board_button_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_node/onoff_client/main/extr_board.c_board_button_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUTTON_IO_NUM = common dso_local global i32 0, align 4
@BUTTON_ACTIVE_LEVEL = common dso_local global i32 0, align 4
@BUTTON_CB_RELEASE = common dso_local global i32 0, align 4
@button_tap_cb = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"RELEASE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @board_button_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @board_button_init() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @BUTTON_IO_NUM, align 4
  %3 = load i32, i32* @BUTTON_ACTIVE_LEVEL, align 4
  %4 = call i64 @iot_button_create(i32 %2, i32 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %0
  %8 = load i64, i64* %1, align 8
  %9 = load i32, i32* @BUTTON_CB_RELEASE, align 4
  %10 = load i32, i32* @button_tap_cb, align 4
  %11 = call i32 @iot_button_set_evt_cb(i64 %8, i32 %9, i32 %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %7, %0
  ret void
}

declare dso_local i64 @iot_button_create(i32, i32) #1

declare dso_local i32 @iot_button_set_evt_cb(i64, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
